[package]
name = "nata-and-nena"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = [
    "png",
    "x11",
    "webgl2",
    "bevy_asset",
    "bevy_render",
] }
bevy_prng = { version = "0.7.1", features = ["rand_chacha"] }
bevy_rand = { version = "0.7.1", features = ["rand_chacha"] }
bevy_rapier2d = { version = "0.27.0", features = ["simd-stable"] }
rand = "0.8"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
